--- a/MyApplication10/app/src/main/AndroidManifest.xml
+++ b/MyApplication10/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".CadastroActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
